[package]
name = "rst_queue"
version = "0.1.4"
edition = "2021"
authors = ["Suraj Kalbande <suraj202923@gmail.com>"]
license = "MIT"
description = "High-performance async queue system built with Rust and Crossbeam"
repository = "https://github.com/suraj202923/rst_queue"
homepage = "https://github.com/suraj202923/rst_queue"
readme = "README.md"
keywords = ["queue", "async", "crossbeam", "concurrent"]
categories = ["data-structures", "concurrency"]

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam = { version = "0.8", features = ["crossbeam-queue"] }
num_cpus = "1.16"
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py38"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[[bin]]
name = "queue_example"
path = "src/bin/example.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
