[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rst_queue"
version = "0.1.0"
description = "High-performance async queue system built with Rust and Crossbeam"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Suraj Kalbande", email = "suraj202923@gmail.com" },
]
readme = "README.md"
keywords = ["queue", "async", "crossbeam", "concurrent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Operating System Kernels",
]
repository = "https://github.com/suraj202923/rst_queue"

[tool.maturin]
python-source = "python"
module-name = "rst_queue._rst_queue"
