[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rst-queue"
version = "0.1.6"
description = "High-performance async queue system built with Rust and Crossbeam"
requires-python = ">=3.8"
authors = [
    { name = "Suraj Kalbande", email = "suraj202923@gmail.com" },
]
readme = "README.md"
keywords = ["queue", "async", "crossbeam", "concurrent"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Operating System Kernels",
]

[project.urls]
Homepage = "https://github.com/suraj202923/rst_queue"
Repository = "https://github.com/suraj202923/rst_queue"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "maturin>=1.0"]

[tool.maturin]
python-source = "python"
module-name = "rst_queue._rst_queue"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
